@@ -1,3 +1,7 @@
+2013-03-11  Mike Blumenkrantz
+
+        * clean up gnutls session initialization
+
 2013-03-10  Cedric Bail
 
 	* Eeze: add a dummy implementation of libmount when it is not available.
